--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -106,6 +106,9 @@
             border-color: #2B3961 transparent transparent transparent;
           }
         }
+        &:hover{
+          color:#fff;
+        }
       }
     }
   }
