fix mob ref-charges

--- a/src/app/referral/referral-charges/referral-charges.component.html
+++ b/src/app/referral/referral-charges/referral-charges.component.html
@@ -23,7 +23,7 @@
       </thead>
       <tbody class="table__body table__body--none-shadow">
       <!-- t-row start-->
-      <tr class="table__row--mob">
+      <tr class="table__row--mob referral__charges-mob-row referral__charges-mob-row--open">
         <td class="table__cell table__cell--tal">
           <div class="charges-type">Withdraw</div>
           <div class="table__date-time">
@@ -43,7 +43,7 @@
           </svg>
         </td>
       </tr>
-      <tr [id]="item.id" class="table__details">
+      <tr class="table__details">
         <td class="table__details-cell" colspan="4">
 
           <div class="table__details-item">
@@ -51,7 +51,7 @@
             <div class="table__details-item-value" style="display: block; padding: 0;">my_beautifull_wmail@gmail.com</div>
           </div>
           <div class="table__details-item">
-            <div class="table__details-item-title">Percent from comission:</div>
+            <div class="table__details-item-title">Percent:</div>
             <div class="table__details-item-value">30%</div>
           </div>
           <div class="table__details-item">
