--- a/src/assets/scss/pages/_referral.scss
+++ b/src/assets/scss/pages/_referral.scss
@@ -279,6 +279,17 @@
   .charges-type{
     color:$darker-blue;
   }
+  &__charges-mob-row{
+    position: relative;
+    .table__cell{
+      z-index: 2;
+    }
+    &--open{
+      .table__cell--arr-mob{
+        transform: rotate(180deg);
+      }
+    }
+  }
   /*--- elements end ---*/
 }
 
@@ -629,6 +640,21 @@
     }
     .charges-type{
       color:$light-blue;
+    }
+    &__charges-mob-row{
+      &--open{
+        &:after{
+          content:"";
+          position: absolute;
+          z-index: 0;
+          //top: 0;
+          left: 0;
+          display: block;
+          width: 100%;
+          height: 60px;
+          background: linear-gradient(to right,#21417D 0%, #191A39 100%);
+        }
+      }
     }
     .open-structure{
       &__back-to{
