--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -300,8 +300,59 @@
       width: 152px;
       margin-right: 32px;
     }
+    &__table-tabs{
+      display: flex;
+    }
+    &__table-tabs-item{
+      display: flex;
+      align-items: center;
+      position: relative;
+      color:$darker-blue;
+      text-decoration: underline;
+      &:first-child{
+        margin-right: 24px;
+        &:after{
+          content:'';
+          display: block;
+          width: 1px;
+          height: 14px;
+          position: absolute;
+          right: -12px;
+          background-color: #fff;
+        }
+      }
+      &:hover{
+        cursor: pointer;
+      }
+      &--active{
+        color:#fff;
+        text-decoration: none;
+        &:hover{
+          cursor:default;
+        }
+      }
+      .indicate{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 18px;
+        height: 18px;
+        margin-left: 4px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        background-color: $darker-blue;
+        font-size: 12px;
+        color:#fff;
+      }
+    }
+    &__hide-zero{
+      display: flex;
+      margin-left: auto;
+    }
     &__show-all{
       display: flex;
+      margin-left: 32px;
     }
     //requests start
     &__requests{
@@ -349,6 +400,7 @@
         line-height: 20px;
         margin-bottom: 8px;
         text-align: center;
+        white-space: normal;
       }
       &__button-wrap{
         display: flex;
@@ -496,9 +548,9 @@
   .dark-theme{
     .balance{
       .revoke-request{
-        background-color: #2E304D;
+        background-color: #264479;
         &__triangle{
-          border-top-color: red;
+          border-top-color: #264479;
         }
 
       }
