--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -2,13 +2,14 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>
-        <!--<div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>-->
-        <ul class="dropdown__list">
-          <li class="dropdown__item">ETH</li>
-          <li class="dropdown__item">LTC</li>
-          <li class="dropdown__item">DASH</li>
-        </ul>
+        <!--<div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>-->
+        <!--&lt;!&ndash;<div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>&ndash;&gt;-->
+        <!--<ul class="dropdown__list">-->
+          <!--<li class="dropdown__item">ETH</li>-->
+          <!--<li class="dropdown__item">LTC</li>-->
+          <!--<li class="dropdown__item">DASH</li>-->
+        <!--</ul>-->
+        <div class="dropdown__btn currency-pair-info__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
@@ -16,8 +17,8 @@
         <!--<div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>-->
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
-          <li class="dropdown__item">LTC</li>
-          <li class="dropdown__item">DASH</li>
+          <li class="dropdown__item">LOC</li>
+          <li class="dropdown__item">USD</li>
         </ul>
       </div>
     </div>
