--- a/src/app/dashboard/components/order-book/order-book.component.scss
+++ b/src/app/dashboard/components/order-book/order-book.component.scss
@@ -45,6 +45,10 @@
       color:$grey;
       &:hover{
         cursor: pointer;
+        border-color: #fff;
+        svg{
+          fill:#fff;
+        }
       }
       svg{
         fill:$grey;
@@ -233,7 +237,7 @@
   }
 
   .info {
-    width: 25%;
+    width: 22%;
     max-width: 100%;
     span {
       padding-left: 5px;
@@ -242,7 +246,7 @@
   }
 
   .price {
-    width: 27%;
+    width: 29%;
     max-width: 100%;
     padding-left: 4px;
     padding-right: 4px;
