add refill-money component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
         <div *ngIf="isRegistrationMobilePopupOpen">
           <app-registration-mobile-popup></app-registration-mobile-popup>
         </div>
+        <!--<app-refill-money></app-refill-money>-->
 
         <router-outlet></router-outlet>
 
